# Pattern-Capture

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CaptureSource.h  CapturedData.cpp  CapturedData.h  CommonUtils.cpp  CommonUtils.h  CommonUtilsTest.cpp  Dependencies.cpp  Dependencies.h  Makefile  PatternCapture.cpp  README.md  S.cpp  StringSerializable.h  capturesource.out  sampleSchema.json  sampleSchema1.json  samplecapture.out
Capture/: CMakeLists.txt  CaptureSource.cpp  CaptureSource.h
Capture/BinCapture/: BinCapture.cpp  BinCapture.h
Capture/ProcessCapture/: CMakeLists.txt  Makefile  ProcessCapture.cpp  ProcessCapture.h
Capture/ProcessesCapture/: CMakeLists.txt  ProcessesCapture.cpp  ProcessesCapture.h  ProcessesData.h
Capture/SampleCapture/: SampleCapture.cpp  SampleCapture.h
ProcessInfoCapture/: ProcessInfoCaptureSource.h
api/: ApiClient.cpp  ApiClient.h
api/apiClientJava/: .project  ApiClientJava.cpp  ApiClientJava.h  Makefile  api.py  build.gradle  jniApiClient.h  settings.gradle
common/: CMakeLists.txt  Common.h
common/BinTransfer/: BinTransfer.cpp  BinTransfer.h  CMakeLists.txt
common/CommandLine/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Makefile
common/HttpRelay/: CMakeLists.txt  HttpRelay.cpp  HttpRelay.h  Makefile
common/UdpRelay/: CMakeLists.txt  UdpRelay.cpp  UdpRelay.h
core/scheduler/: ContinuousScheduler.cpp  ContinuousScheduler.h  CronScheduler.cpp  (+9 more)
hooks/: CMakeLists.txt  StatusHook.cpp  StatusHook.h
network/: Server.go
transform/: CMakeLists.txt  SampleTransform.cpp  SampleTransform.h  Transform.h
(+46 files in other folders)
